# oken

./: .gitignore  CLAUDE.md  Taskfile.yml
.claude/: settings.json
.claude/commands/: code-review.md
apps/cli/: .golangci.yml  CLAUDE.md  go.mod  go.sum  main.go
apps/cli/cmd/: delete.go  deploy.go  init.go  invoke.go  list.go  local.go  login.go  logs.go  root.go  secrets.go  status.go  stop.go
apps/cli/internal/api/: agents.go  agents_test.go  auth.go  auth_test.go  client.go  client_test.go  secrets.go
apps/cli/internal/config/: config.go  config_test.go
apps/cli/internal/pack/: pack.go  pack_test.go
apps/cli/internal/ui/: ui.go
apps/docs/: CLAUDE.md  astro.config.mjs
apps/platform/: .cta.json  .env.example  CLAUDE.md  biome.json  package.json  vitest.config.ts  vitest.integration.config.ts
apps/platform/drizzle/: 0000_dry_young_avengers.sql  0000_open_arclight.sql  0001_add-auth-tables.sql
apps/platform/drizzle/meta/: 0000_snapshot.json  _journal.json  (+1 more)
apps/platform/src/: routeTree.gen.ts
apps/runner/: CLAUDE.md  pyproject.toml
apps/runner/src/oken_runner/: agent_registry.py  config.py  docker_manager.py  entrypoint_detector.py  exceptions.py  executor.py  logging.py  models.py  proxy.py  sandbox.py  server.py
apps/runner/src/oken_runner.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
apps/runner/tests/: __init__.py  conftest.py  test_agent_registry.py  test_config.py  test_docker_manager.py  test_entrypoint_detector.py  test_exceptions.py  test_models.py  test_proxy.py  test_server.py
apps/runner/tests/integration/: __init__.py  conftest.py  test_deploy_invoke.py
infra/: docker-compose.yml  platform.Dockerfile  postgres.yml  runner.Dockerfile
(+67 files in other folders)
