[project]
name = "oken-runner"
version = "0.1.0"
description = "Oken agent runner service"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.128.0",
    "docker>=7.1.0",
    "pydantic-settings>=2.12.0",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
]

[tool.uv]
package = true
dev-dependencies = [
    "ruff>=0.9.0",
    "ty>=0.0.1a7",
    "pytest>=8.0.0",
    "pytest-asyncio>=1.3.0",
    "pytest-mock>=3.15.1",
    "respx>=0.22.0",
    "pytest-cov>=7.0.0",
]

[tool.ruff]
target-version = "py313"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
addopts = "-v --tb=short"
markers = [
    "integration: marks tests as integration tests (require Docker)",
]

[project.scripts]
oken-runner = "oken_runner.server:app"
